[project]
name = "pokemon-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pyboy>=2.5.1",
    "pynput>=1.7.7",
    "tcl>=0.2",
]
